[package]
name = "fieldname-access"
version = "0.1.12"
edition = "2021"
rust-version = "1.63"
description = "Derive macro for safe struct field access by their names in runtime"
license = "MIT OR Apache-2.0"
authors = ["huterok"]
documentation = "https://docs.rs/fieldname-access/latest/fieldname_access/"
keywords = ["struct", "field", "access", "runtime-access", "field-access"]
repository = "https://github.com/Huterenok/fieldname-access"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
itertools = "0.14.0"
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = { version = "2.0.100", features = ["derive", "full", "extra-traits"] }
